tests/netperf/isilon_40G/tcp_000/outgoing.txt
zephram-1# netserver -D
Starting netserver with host 'IN(6)ADDR_ANY' port '12865' and family AF_UNSPEC
^C
zephram-1# 









────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-1# bash cpu_usage.sh netserver
^C
10.2 11.3 13.4 13.8 16.0 15.3 16.7 16.0 17.2 16.7 18.2 18.1 19.4 19.4 20.9 21.2 22.7 22.4 22.8 21.5 22.9 21.9 23.5 22.6 24.6 24.1 26.1 25.5 27.1 26.5 28.2 26.5 27.4 26.3 27.7 26.4 28.1 26.9 28.5 27.9 29.5 28.5 30.2 28.6 29.3 27.9 29.4 28.0 29.6 28.7 30.1 29.0 30.7 29.6 31.7 33.8 31.8 32.7 31.0 32.3 31.0 32.2 30.5 32.1 30.8 32.4 30.8 32.4 31.2 31.9 30.0 31.0 29.5 30.8 29.8 30.9 29.7 31.2 30.4 32.4 31.3 32.8 31.1 31.6 29.8 30.9 29.0 30.6 29.3 30.8 29.8 31.7 30.6 32.5 31.0 32.5 31.1 31.8 29.9 31.1 29.3 31.0 29.5 31.4 30.2 31.8 30.6 32.5
average: 27.4148
zephram-1# 







────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# ./ipfwd 1 0.0
[ipfwd] starting
current:  5.157%, error:  5.2%, probability:  0.000%
current:  4.742%, error:  5.6%, probability:  0.000%
current:  6.360%, error:  1.6%, probability:  0.000%
current:  6.848%, error:  0.5%, probability:  0.000%
current:  6.299%, error:  0.5%, probability:  0.000%
current:  5.792%, error:  0.5%, probability:  0.000%
current:  5.328%, error:  0.5%, probability:  0.000%
current:  6.903%, error:  1.6%, probability:  0.000%
current:  6.348%, error:  0.6%, probability:  0.000%
current:  5.835%, error:  0.5%, probability:  0.000%
current:  6.366%, error:  0.5%, probability:  0.000%
current:  6.854%, error:  0.5%, probability:  0.000%
current:  6.305%, error:  0.5%, probability:  0.000%
^C
zephram-2# ipfw show | wc
      52     470    3265
zephram-2# ipfw show | wc
      52     470    3265
zephram-2# 




────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# netperf -l 60 -H 7.7.7.2 -t TCP_STREAM
MIGRATED TCP STREAM TEST from 0.0.0.0 (0.0.0.0) port 0 AF_INET to 7.7.7.2 (7.7.7.2) port 0 AF_INET
Recv   Send    Send                          
Socket Socket  Message  Elapsed              
Size   Size    Size     Time     Throughput  
bytes  bytes   bytes    secs.    10^6bits/sec  

131072 131072 131072    60.00    5015.39   
zephram-2# 











────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# bash cpu_usage.sh netperf
^C
10.2 10.1 10.6 10.6 11.4 10.8 12.3 11.8 12.5 12.4 13.4 12.9 14.0 14.1 14.6 13.8 14.6 14.0 15.1 14.7 16.0 15.4 16.6 16.2 17.3 17.0 18.2 17.2 17.7 18.8 17.8 18.5 17.7 18.7 17.8 18.8 17.9 18.8 18.5 19.4 18.1 18.9 18.1 19.2 18.6 19.8 19.2 20.8 20.0 21.0 20.3 22.5 21.2 22.4 21.1 21.8 20.7 22.0 20.6 22.1 20.9 22.1 21.1 22.7 21.7 22.3 20.7 21.5 20.3 21.0 19.8 20.6 19.9 21.2 20.4 22.3 21.4 22.6 21.4 22.0 22.9 21.4 22.3 21.0 22.2 21.3 22.3 21.4 22.6 21.8 23.2 22.0 23.4 22.1 22.8 21.7 22.5 21.5 22.5 21.3 22.4 21.3 22.2 20.9
average: 18.9567
zephram-2# 
 
